# sumi.web

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  Dockerfile.worker  alembic.ini  cloudbuild.yaml  docker-compose.yml
.claude/: launch.json
.claude/plans/: expressive-purring-crane-agent-a36d5c73e5618b57a.md
.github/workflows/: deploy.yml
backend/: config.py  main.py  pyproject.toml  worker_health.py
backend/agents/: definition.py  manager.py
backend/agents/tools/: base.py  registry.py
backend/agents/tools/common/: datetime_tool.py  weather.py  web_search.py
backend/api/: agent_audio_init.py  agent_conversation_test.py  agent_skills.py  agent_tools.py  agent_variables.py  agent_voice_test.py  agents.py  annotations.py  auth.py  conversations.py  deps.py  memory.py  models.py  rooms.py  traces.py
backend/db/: engine.py  models.py  seed.py  update_prompts.py  update_tts.py
backend/db/migrations/: env.py
backend/memory/: manager.py  models.py  vector.py
backend/pipeline/: events.py  hangup_detector.py  logic_tree.py  prompt_builder.py  qa_recall.py  task_chain.py  voiceprint.py  voiceprint_stt.py  worker.py
backend/providers/: base.py  factory.py  registry.py
backend/providers/asr/: dashscope_paraformer.py  dashscope_realtime.py  deepgram.py  openai_whisper.py
backend/providers/nlp/: anthropic.py  openai_gpt.py
backend/providers/tts/: dashscope_cosyvoice.py  elevenlabs.py  openai_tts.py
backend/services/: audio_init.py  conversation_test.py  voice_test.py  voice_test_audio.py
backend/services/prompts/: conversation_test.py  customer_service.py  debt_collection.py  emotional_companion.py  game_npc.py  insurance_renewal.py  medical_triage.py  psych_support.py  restaurant_booking.py  sales_agent.py  sop_extraction.py
backend/tests/: test_e2e.py  test_voiceprint.py
backend/tracing/: audio_recorder.py  batch_writer.py  broadcaster.py  collector.py  instrumented_llm.py  instrumented_tts.py  models.py  schemas.py  session_tracer.py  trace_log.py
deploy/: .env.frontend.production  DEPLOY.md  cloudrun-backend.yaml  cloudrun-frontend.yaml  cloudrun-worker.yaml  deploy.sh  schema.sql  setup-secrets.sh
docs/: dev-notes-2026-04-06.md
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(app)/: layout.tsx
frontend/src/app/(app)/agents/: page.tsx
frontend/src/app/(app)/agents/[id]/: page.tsx
frontend/src/app/(app)/agents/new/: page.tsx
frontend/src/app/(app)/conversation/: page.tsx
frontend/src/app/(app)/conversation/components/: AgentSwitcher.tsx  TranscriptPanel.tsx
frontend/src/app/(app)/debug/: page.tsx
frontend/src/app/(app)/history/: page.tsx
frontend/src/app/(app)/history/[id]/: page.tsx
frontend/src/app/(app)/models/: page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/hooks/: useAuth.ts  useTranscript.ts  useVoiceSession.ts
frontend/src/lib/: api.ts  firebase.ts  livekit.ts  supabase.ts
frontend/src/stores/: auth.ts  conversation.ts
